fixed a spacing thing and updated the screenshot to a gif

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ color: #407C9B  ;
 max-width: 434px;
 max-height: 300px;
 position: absolute;
-top: 45%;
+top: 50%;
 left: 50%;
 border: 1px solid #3DB5E1;
 box-shadow: 0 0 0px #3DB5E1;
